--- a/style/blog.css
+++ b/style/blog.css
@@ -1,4 +1,16 @@
-div{
-    background-color: tomato;
+.hi{
+    background-color: rgb(223, 148, 134);
     padding: 10px;
+    margin: 20px;
+    border: 5px solid yellow;
+    border-radius: 10px;
+    width: 300px;
+    height: 200px;
+   
+}
+#flex{
+    display: flex;
+}
+h3{
+    text-decoration: underline 5px yellow;
 }
